needs additonal formatting for spacing issues but the look is acheived

--- a/mangaverse-v2/src/pages/Updated-Manga/updated-manga.css
+++ b/mangaverse-v2/src/pages/Updated-Manga/updated-manga.css
@@ -1,8 +1,16 @@
 .updated-info-container{
     width: 90%;
     overflow-y: scroll;
+    
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+
 }
 
 .updated-info-container::-webkit-scrollbar{
     display: none;
+}
+
+.manga{
+
 }
